# sci

./: pyproject.toml
src/: decision_tree.ipynb  k_mean.ipynb  logistic.ipynb  svm.ipynb  tf_idf.ipynb  userdict.txt  wt.ipynb  梯度下降.ipynb  调参.ipynb
src/knn/: 矢量量化.ipynb
src/决策树/: demo_.xlsx  userdict.txt  vectorizer.ipynb  决策树.ipynb
src/分类sku/: attr2class.ipynb  code.xlsx  demo.xlsx  userdict.txt
src/逻辑回归/: logistic_regression.ipynb
src/预处理/: feature_selection.ipynb  preprocessing.ipynb  降维.ipynb
tests/: math_text.py
